--- a/manuscript/jss_manuscript/refs.bib
+++ b/manuscript/jss_manuscript/refs.bib
@@ -237,7 +237,7 @@
 @book{RN28696,
    author = {Westfall, Peter H and Young, S Stanley},
    title = {Resampling-based Multiple Testing: Examples and Methods for {P-value} Adjustment},
-   publisher = {John Wiley & Sons},
+   publisher = {John Wiley \& Sons},
    volume = {279},
    year = {1993}
 }
